@@ -136,14 +136,11 @@ test_version_parse(void)
 	test_fail(parseversion(&a, "a:0-0") == NULL);
 	test_fail(parseversion(&a, "A:0-0") == NULL);
 
-	/* FIXME: parseversion() should validate input! */
-#if 0
 	/* Test invalid characters in upstream version. */
 	test_fail(parseversion(&a, "0:!#@$%&/|\\<>()[]{};,=*^'-0") == NULL);
 
 	/* Test invalid characters in revision. */
 	test_fail(parseversion(&a, "0:0-!#@$%&/|\\<>()[]{};,=*^'") == NULL);
-#endif
 
 	/* FIXME: Complete. */
 }
