@@ -56,6 +56,8 @@ dpkg (1.15.8) UNRELEASED; urgency=low
     Martin Pitt, thanks! Closes: #68788, #68861, #497304, #525567, #583902
   * Remove obsolete internal status aliases “postinst-failed” for
     stat_halfconfigured and “removal-failed” for stat_halfinstalled.
+  * Check version syntax when parsing it from libdpkg based programs.
+    Closes: #574704
 
   [ Updated programs translations ]
   * German (Sven Joachim).
